Fixed text wrap on resto profile header

--- a/app/stylesheets/redesign/_css/spoonfeed.scss
+++ b/app/stylesheets/redesign/_css/spoonfeed.scss
@@ -3715,6 +3715,9 @@ p.search_filter_hint {
 				}
 			}
 		}
+		#restaurant_meta {
+		  float: left;
+		}
 	}
 	.manager_and_facts, .account_contact, .account_social {
 	  float: left;
